summary: Descubra las novedades de Amazon FSx for NetApp ONTAP. 
---
= Novedades de Amazon FSx for NetApp ONTAP
:hardbreaks:
:allow-uri-read: 
:nofooter: 
:icons: font
:linkattrs: 
:imagesdir: ./media/


[role="lead"]
Descubra las novedades de FSx para ONTAP.



== 11 de noviembre de 2025



=== Compatibilidad con la replicación entre sistemas ONTAP locales y sistemas de archivos FSx para ONTAP

La replicación de datos está disponible entre un sistema ONTAP local y un sistema de archivos FSx para ONTAP desde la página Sistemas de la NetApp Console .

link:https://docs.netapp.com/us-en/storage-management-fsx-ontap/use/task-manage-fsx-systems.html#replicate-data["Replicar datos"]



== 6 de octubre de 2025



=== BlueXP ahora es NetApp Console

La NetApp Console, construida sobre la base BlueXP mejorada y reestructurada, proporciona una gestión centralizada del almacenamiento de NetApp y de los NetApp Data Services en entornos locales y en la nube a nivel empresarial, brindando información en tiempo real, flujos de trabajo más rápidos y una administración simplificada, que es altamente segura y compatible.

Para obtener más detalles sobre lo que ha cambiado, consulte lalink:https://docs.netapp.com/us-en/console-relnotes/index.html["Notas de la versión de la NetApp Console ."^]



== 03 de agosto de 2025



=== Mejoras en la pestaña de relaciones de replicación

Hemos agregado varias columnas nuevas a la tabla de relaciones de replicación para brindarle más información sobre sus relaciones de replicación en la pestaña *Relaciones de replicación*. La tabla ahora incluye las siguientes columnas:

* Política de SnapMirror
* Sistema de archivos fuente
* Sistema de archivos de destino
* Estado de la relación
* Última hora de transferencia




== 14 de julio de 2025



=== Soporte para replicar datos entre dos sistemas de archivos FSx para ONTAP
